--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,10 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <div id="anchor"><a href='/'>Main Page</a></div>
+    <nav class="nav">
+        <a class='nav-link' href='/'>Main Page</a>
+        <a class='nav-link' href="/tags">Tags</a>
+    </nav>
     {% block content %}
 
     {% endblock %}
