--- a/templates/post.html
+++ b/templates/post.html
@@ -5,18 +5,23 @@
 {% block content %}
 
 <h2>{{post.title}}</h2>
-
-<h5>Author: {{post.user.get_full_name}} || created at: {{post.created_at}}</h5>
-<div><img width="100px" src="{{post.user.image_url}}"></div>
+<h5>Author: <a href='/users/{{user.id}}' class='btn btn-outline-secondary'>{{user.make_full_name}}</a> || created at: {{post.created_at}}</h5>
+<div><img width="100px" src="{{user.image_url}}"></div>
 
 <p>{{post.content}}</p>
 
-<form action='/posts/{{post.id}}/edit'>
-    <button>Edit</button>
-</form>
-
-<form action="/posts/{{post.id}}/delete" method="POST">
-    <button>Delete</button>
+{% if post.tags %}
+    <p>
+        <b>Tags:</b> 
+        {% for tag in post.tags %}
+        <a href="/tags/{{tag.id}}"><button class='btn btn-outline-secondary btn-sm'>{{tag.name}}</button></a>
+        {% endfor %}
+    </p>
+{% endif %}
+    
+<form>
+    <button class="btn btn-primary" formaction="/posts/{{post.id}}/edit" formmethod="GET">Edit</button>
+    <button class="btn btn-danger" formaction="/posts/{{post.id}}/delete" formmethod="POST">Delete</button>
 </form>
 
 {% endblock %}
