--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -4,23 +4,16 @@
 
 {% block content %}
 
-<span>
+<div class="container">
     <div>
     <img src='{{user.image_url}}' width="200px">
     </div>
 
     <h3>{{name}}</h3>
-    <span>
-        <form style="display: inline-block" action="/users/{{user.id}}/edit">
-            <button>Edit</button>
-        </form>
-    </span>
-    <span>
-        <form style="display: inline-block" action="/users/{{user.id}}/delete" method="POST">
-            <button>Delete</button>
-        </form>
-    </span>
-</span>
+    <form>
+        <button class="btn btn-primary" formmethod="GET" formaction="/users/{{user.id}}/edit">Edit</button>
+        <button class="btn btn-danger" formmethod="POST" formaction="/users/{{user.id}}/delete">Delete</button>
+    </form>
 
 {% if posts %}
 <div class="container">
@@ -35,7 +28,9 @@
 {% endif %}
 
 <form action="/users/{{user.id}}/posts/new">
-    <button>Create New Post</button>
+    <button class="btn btn-primary">Create New Post</button>
 </form>
+
+</div>
 
 {% endblock %}
